Further spacing/font size fixes.

--- a/src/assets/scss/modules/_footer.scss
+++ b/src/assets/scss/modules/_footer.scss
@@ -1,11 +1,11 @@
 .footer-container {
   @include xy-grid-container; 
   text-align: center;
-  padding-bottom: 3rem;
+  padding: 2rem 0;
 
   p {
-    font-size: 0.6rem;
-    line-height: 1rem;
+    font-size: 0.75rem;
+    line-height: 0.9rem;
   }
 }
 
