--- a/src/assets/scss/templates/_front-page.scss
+++ b/src/assets/scss/templates/_front-page.scss
@@ -145,11 +145,13 @@
   .latest-news {
     padding: 0 1.5rem;
     text-align: center;
+    margin-bottom: 2rem;
 
     @include breakpoint(medium) {
       text-align: left;
       padding-left: 3rem;
       padding-right: 2rem;
+      margin-bottom: initial;
     }
 
     h2 {
@@ -191,6 +193,11 @@
 
 // Instagram
 .instagram-row {
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
   text-align:center;
   margin-bottom: 3.5rem;
 
